@@ -1,0 +1,11 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Photo Frame
+_Comment=Photo Frame
+Exec=gphotoframe-screensaver
+TryExec=gphotoframe-screensaver
+StartupNotify=false
+Terminal=false
+Type=Application
+Categories=GNOME;Screensaver;
+OnlyShowIn=GNOME;
