@@ -5,3 +5,4 @@ help=False
 [build_i18n]
 domain=gphotoframe
 desktop_files=[("share/applications", ("gphotoframe.desktop.in",))]
+key_files=[("share/applications/screensavers", ("gphotoframe-screensaver.desktop.in",))]
