@@ -4,6 +4,7 @@ import os
 from distutils.core import setup
 from DistUtilsExtra.command import *
 import lib.constants as constants
+import lib.extras.build_i18n
 
 os.chmod("gphotoframe.glade", 0644)
 
@@ -18,7 +19,9 @@ setup(name = 'gphotoframe',
       package_dir = {'gphotoframe' : 'lib'},
       packages = ['gphotoframe', 'gphotoframe.plugins', 'gphotoframe.utils'],
       scripts = ['gphotoframe'],
-      data_files = [('share/gphotoframe', ['gphotoframe.glade'])],
+      data_files = [('share/gphotoframe', ['gphotoframe.glade']),
+                    ('lib/gnome-screensaver/gnome-screensaver', 
+                     ['gphotoframe-screensaver'])],
       cmdclass = {"build" : build_extra.build_extra,
                   "build_i18n" : build_i18n.build_i18n,
                   "build_help" : build_help.build_help,
