@@ -1,5 +1,7 @@
 2009-07-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* photoframe.py, gnomescreensaver.py, etc: Added support for
+	  gnome-screensaver (issue #21).
 	* extras/build_i18n.py: Added distutils.extras hacks.
 
 2009-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
